vcs/specs/parser/fail/modules/invalid_mount.vr
// @test: parse-fail
// @level: L0
// @tags: parser, modules, mount, error
// @description: Test invalid mount statement without path
// @expected-error: E063

mount;
